Created a function to update the status of a session in a program (CLOSED, OPENED, COMPLETED)
